--- a/package.json
+++ b/package.json
@@ -17,16 +17,13 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
-    "react-slick": "^0.30.2",
-    "react-toastify": "^10.0.5",
-    "slick-carousel": "^1.8.1"
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
